[package]
name = "ingestion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Service binary (§5): chain data source adapters + (Sprint 2 tasks 2–4) the
# reorg-aware block tree and chain-event emission. This task delivers the source
# adapter layer — the RPC failover pool (adapter #3).
[[bin]]
name = "ingestion"
path = "src/main.rs"

[dependencies]
events = { workspace = true }
telemetry = { workspace = true }
# The shared publish seam (§20): `EventSink`/`KafkaEventSink`/`publish_resilient`,
# re-exported through `crate::publisher`. The Kafka producer config now lives in
# `event-bus` (shared with detection), so ingestion no longer depends on rdkafka
# directly.
event-bus = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# §19 metrics facade — a near-free no-op until a binary installs the Prometheus
# exporter (`telemetry::metrics::init`), so the library and its tests stay
# exporter-agnostic. Used by the ExEx bridge (source::exex) to surface
# notification/reorg/backpressure counters on the in-node path.
metrics = { workspace = true }

alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-transport = { workspace = true }
url = { workspace = true }

[dev-dependencies]
# Shared recording `EventSink` for the pipeline's emit tests (the `FlakySink`
# retry double stays local — it has a single user, so nothing to dedup).
event-bus = { workspace = true, features = ["test-util"] }
# A hermetic in-process JSON-RPC server (no network, no external node) to prove
# failover + circuit breaking deterministically in tests/failover.rs.
axum = { workspace = true }
serde_json = { workspace = true }
# Scoped in-memory metrics recorder for asserting the ExEx bridge's counters
# without installing a global exporter (same pattern as detection's metrics test).
metrics-util = { workspace = true }

[lints]
workspace = true
