[package]
name = "rule-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Rule engine service (§9) — customer-defined alerting on top of the
# intelligence graph, the enterprise pricing tier. Sprint 9 t1 builds the
# foundation the rest of the sprint stacks on:
#
#   `model` — the `Rule`/`Condition`/`LogicOp`/`TemporalConstraint`/`Action`
#             document a customer authors (validated at the parse boundary,
#             §9's closed condition vocabulary).
#   `store` — the Postgres rule-definition store behind the `RuleStore` seam,
#             customer-isolated by construction: every read/write is keyed by
#             `owner`, so no query can cross customers.
#
# The rule compiler (t2), temporal state machines (t3) and the Kafka consumer +
# `POST /v1/rules` surface (t4) consume these seams; like intelligence, they are
# tested against the in-memory double behind the `test-util` feature.

[dependencies]
events = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Postgres system of record for rule definitions (§14: rule-engine owns its
# tables; the shared `db` crate supplies only the pool + fault classification).
db = { workspace = true }
sqlx = { workspace = true }

# Temporal window state (t3): Redis is the TTL-bounded store for in-flight
# `Sequence`/`Frequency` windows (key expiry ≡ window close, §9); tokio for the
# per-partition worker tasks + bounded mailboxes (§17); tokio-util for the
# shutdown token, the same shape as `event-bus::run_consumer`.
redis = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# Exact decimal thresholds in `Condition::TransferAmount` — never f64.
rust_decimal = { workspace = true }
# Validate `Action::WebhookAlert` URLs once, at the parse boundary, so the t5
# delivery path never sees an unparseable target.
url = { workspace = true }
# `Condition` fields carry the event schema's `Address` type.
alloy-primitives = { workspace = true }

# The t4 Kafka consumer: the shared consume/produce seams (`run_consumer`,
# `EventSink`/`publish_resilient`) — never raw rdkafka in the logic; rdkafka
# itself only to build the `StreamConsumer` the seam drives.
event-bus = { workspace = true }
rdkafka = { workspace = true }
anyhow = { workspace = true }

# The production `EnrichmentSource` adapter reads the intelligence stores/hot
# cache through that crate's own seams (`labels_for`, `sanction_matches`,
# cache-aside risk) — the same reads its gRPC service serves, so the rule
# engine and a screening call can never disagree about an address.
intelligence = { workspace = true }

# t5 webhook delivery: the production `ActionSink` POSTs alerts to
# customer-controlled endpoints (workspace-pinned rustls build, no native TLS).
reqwest = { workspace = true }
# Deterministic alert ids: a fire's identity is hashed (SHA-256 → UUIDv8, the
# seeded-label recipe in `intelligence::seed`) so an at-least-once redelivery
# re-emits the *same* alert id — the customer's webhook dedup key.
sha2 = { workspace = true }

# Service binary plumbing (src/main.rs): tracing/metrics boot + env config.
telemetry = { workspace = true }
secrecy = { workspace = true }
# §19 counters (`rule_set_refresh_total`, `rule_fires_total`) through the
# `metrics` facade — a no-op until the binary's exporter installs the recorder.
metrics = { workspace = true }

[features]
# Exposes `rule_engine::test_util` (the in-memory `RuleStore` double) to this
# crate's own integration tests and the t2–t5 consumers' tests.
test-util = []

[dev-dependencies]
tokio = { workspace = true }
# Self-dependency with `test-util` on, so `tests/` sees the in-memory double.
rule-engine = { path = ".", features = ["test-util"] }
# The recording `EventSink` the consumer tests assert emissions against.
event-bus = { workspace = true, features = ["test-util"] }
# Throwaway loopback HTTP endpoint the webhook-delivery tests point the sink
# at — real requests, zero external network.
axum = { workspace = true }
# Live-store integration tests (`#[ignore]`): real Postgres/Redis via throwaway
# containers, run by `just test-integration` — proves `PgRuleStore` and
# `RedisTemporalStore` honour the same contracts the doubles do.
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "redis"] }

[lints]
workspace = true
