[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# The public В§11 API service вЂ” the JWT-gated front door: `GET /v1/address/{addr}/risk`
# and `/labels` (gRPC into `intelligence`), `GET /v1/audit/incident/{id}` (proxies
# event-store's existing internal read endpoint) and `GET /v1/incidents` (proxies
# simulation-projection's). Owns end-user auth so the internal services it fronts
# don't have to (see event-store's `http.rs` module docs).

[lints]
workspace = true

[dependencies]
events = { workspace = true }
telemetry = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Shared HTTP handler-error type (В§11) вЂ” see crates/api-error.
api-error = { workspace = true }

# HTTP server. axum + tower-http mirror event-store's own stack; utoipa/-swagger-ui/
# -axum give this public surface the same OpenAPI/Swagger docs event-store's append
# API has.
axum = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }

# gRPC client into `intelligence`'s `IntelligenceRead` service (В§11) вЂ” reuses the
# generated `pb` client stub straight from that crate rather than recompiling the
# proto here, so the two can never drift.
tonic = { workspace = true }
intelligence = { workspace = true }

# Outbound HTTP client to event-store's and simulation-projection's existing
# internal read endpoints (В§11).
reqwest = { workspace = true }

# JWT bearer verification (no issuance вЂ” see `src/auth.rs`).
jsonwebtoken = { workspace = true }

# `POST /v1/rules` (В§9/В§11, Sprint 9 t4): the rule model + customer-isolated
# `RuleStore` seam come from the rule-engine crate (the wire form IS the
# stored form вЂ” no translation layer here); `db` supplies the Postgres pool.
rule-engine = { workspace = true }
db = { workspace = true }

# `WS /v1/stream` (В§11): the shared Kafka-backbone consume seam (`run_consumer`/
# `EventHandler`, same as event-store's ingest) feeds the provisional/confirmed/
# retracted alert lifecycle into a broadcast channel every WS connection
# subscribes to. `futures-util` splits the axum `WebSocket` into concurrent
# send/receive halves (see `src/http.rs`).
event-bus = { workspace = true }
rdkafka = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
alloy-primitives = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
secrecy = { workspace = true }
# Parse the JWT `sub` claim into a `CustomerId` for В§13 usage metering.
uuid = { workspace = true }
# В§13/В§19 usage counters (`usage_events_recorded_total`/`_dropped_total`) through
# the `metrics` facade; the binary exports them via `telemetry::metrics`. A no-op
# until the exporter installs the global recorder.
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Shared recording `EventSink` for the usage-publisher tests (В§13).
event-bus = { workspace = true, features = ["test-util"] }
# The in-memory `RuleStore` double for the `POST /v1/rules` handler tests.
rule-engine = { workspace = true, features = ["test-util"] }
# Mint tokens in the JWT middleware tests.
jsonwebtoken = { workspace = true }
# Drive the router directly (`ServiceExt::oneshot`) without binding a listener.
tower = { workspace = true }
# Drive a real client connection against a bound listener for the `/v1/stream`
# lifecycle test вЂ” `ServiceExt::oneshot` can't exercise a WS upgrade.
tokio-tungstenite = { workspace = true }
